namespaces/live.cloud-platform.service.justice.gov.uk/care-arrangement-plan-prototype-staging/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: care-arrangement-plan-prototype-staging
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "staging"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HQ"
    cloud-platform.justice.gov.uk/slack-channel: "cdpt-care-arrangement-plan"
    cloud-platform.justice.gov.uk/application: "Care Arrangement Plan Prototype"
    cloud-platform.justice.gov.uk/owner: "Central Digital Product Team: central-digital-product-team@justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/cap-prototype-ur"
    cloud-platform.justice.gov.uk/team-name: "central-digital-product-team"
    cloud-platform.justice.gov.uk/review-after: "2026-08-24"
